--- a/yalose/public_html/index.html
+++ b/yalose/public_html/index.html
@@ -12,5 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>Ya lo se 1</div>
+        <div>Ya lo se 2</div>
     </body>
 </html>
