--- a/yalose/public_html/index.html
+++ b/yalose/public_html/index.html
@@ -14,5 +14,6 @@ and open the template in the editor.
         <div>Ya lo se 1</div>
         <div>Ya lo se 2</div>
         <div>El tercero y ultimo commit</div>
+        <p>Lo modifico desde GIT</p>
     </body>
 </html>
